v1.0.6 Quickperf, improved sql, minimized docker image & java 17
- Added Quickperf to help easier detect bad sql queries. As a result, several queries got improved
- Minimized docker image using jlink
- Downgraded java version to 17
- Removed CustomJobDefinitionDeserializer.java